syntax = "proto3";

option go_package = "./;dto";

package dto;

// import "tagger/tagger.proto";

service User {
  rpc UsersCreateUser(UsersCreateUserRequest)
      returns (UsersCreateUserResponse) {}
  rpc UsersLogin(UsersLoginRequest)
      returns (UsersLoginResponse) {}
  rpc UsersLogout(UsersLogoutRequest)
      returns (UsersLogoutResponse) {}
  rpc UsersChangePwd(UsersChangePwdRequest)
      returns (UsersChangePwdResponse) {}
  rpc UsersGetSettings(UsersGetSettingsRequest)
      returns (UsersGetSettingsResponse) {}
  rpc UsersUpdateSettings(UsersUpdateSettingsRequest)
      returns (UsersUpdateSettingsResponse) {}
  rpc UsersGetIdByEmail(UsersGetIdByEmailRequest)
      returns (UsersGetIdByEmailResponse) {}
  rpc UsersCreateSummary(UsersCreateSummaryRequest)
      returns (UsersCreateSummaryResponse) {}
}

message Settings {
    int32 summary_length = 1;
    string summary_prompt = 2;
    string emphasis_prompt = 3;
}

message UsersCreateUserRequest {
  string username = 1;
  string password = 2;
}

message UsersCreateUserResponse {
  int64 pk = 1;
  string id = 2;
  string message = 3;
}

message UsersLoginRequest {
    string username = 1;
    string password = 2;
}

message UsersLoginResponse {
    string message = 1;
}

message UsersLogoutRequest {
    string id = 1;
}

message UsersLogoutResponse {
    string message = 1;
}

message UsersChangePwdRequest {
    string old_password = 1;
    string new_password = 2;
    string id = 3;
}

message UsersChangePwdResponse {
    string message = 1;
}

message UsersGetSettingsRequest {
    string id = 1;
}

message UsersGetSettingsResponse {
    Settings settings = 1;
    string message = 2;
}

message UsersUpdateSettingsRequest {
    string id = 1;
    Settings settings = 2;
}

message UsersUpdateSettingsResponse {
    string message = 1;
}

message UsersGetIdByEmailRequest {
    string email = 1;
}

message UsersGetIdByEmailResponse {
    string id = 1;
}

message UsersCreateSummaryRequest {
    string summary = 1;
}

message UsersCreateSummaryResponse {
    string message = 1;
}
